<resources>
    <string name="app_name">Exam</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="need_account_click_here">Need Account? Click here</string>
    <string name="logout">logout</string>
    <string name="placeholder">placeholder</string>
    <string name="movies">Movies</string>
    <string name="release_date">Release Date : </string>
    <string name="duration">Duration : </string>
    <string name="plot">Plot :</string>
    <string name="search">Search</string>
</resources>